論文の修正

--- a/index.html
+++ b/index.html
@@ -82,12 +82,13 @@
         <li>Kazuya Yaginuma, Jun Asakawa, Yuichi Nakagawa, Yoshihiro Tsuruda, Hiroyuki Koizumi,
           Kota Kakihara, Kanta Yanagida, Yusuke Murata, <b><u>Mikihiro Ikura</u></b>, Shuhei Matsushita,
           Yoshihide Aoyanagi, Takeshi Matsumoto: AQT-D: CubeSat Demonstration of a Water Propulsion
-          System Deployed from ISS, Transaction of JSASS, Aerospace Technology Japan, Vol. 17, No. 20, pp.1-8, 2020. 
+          System Deployed from ISS, Transaction of JSASS, Aerospace Technology Japan, Vol. 18, No. 4, pp.141-148, 2020. 
           <a href="https://doi.org/10.2322/tastj.18.141">https://doi.org/10.2322/tastj.18.141</a>
         </li><br>
         <li><b><u>Mikihiro Ikura</u></b>, Satoshi Ikari, Atsushi Tomiki, Ryu Funase, Shinichi Nakasuka:
           Estimation Algorithm of Relative Position and Attitude during Proximity Rendezvous
           Using Multiple Ultra-Wide-Band Devices, The 31st ISTS Special Issue of Transaction of JSASS,
+          Vol. 17, No. 1, pp.43-50, 2019.
           Aerospace Technology Japan. <a href="https://doi.org/10.2322/tastj.17.43">https://doi.org/10.2322/tastj.17.43</a>
         </li><br>
       </ol>
