QCAVなどの追加

--- a/index.html
+++ b/index.html
@@ -55,8 +55,8 @@
       <h3>Skills</h3>
       <ul>
         <li>Language: Japanese (native), English (intermediate)</li>
-        <li>Programming language: C/C++, Python, Javascript, Ruby, HTML</li>
-        <li>Software: OpenCV, OpenGL, MATLAB, Linux(Ubuntu), MS Office, Inventor, Adobe Illustrator, AfterEffects, ROS, PyTorch, Chainer</li>
+        <li>Programming language: C/C++, MATLAB, Python, Javascript, Ruby, HTML</li>
+        <li>Software: OpenCV, OpenGL, CUDA, Linux(Ubuntu), ROS, PyTorch, Chainer, MS Office, Inventor, Adobe Illustrator, AfterEffects, </li>
       </ul>
 
       <h3>Scholarship & Awards</h3>
@@ -75,7 +75,7 @@
       <ol>
         <li><b><u>Mikihiro Ikura</u></b>, Leo Miyashita, and Masatoshi Ishikawa:
           Stabilization System for UAV Landing on Rough Ground by Adaptive 3D
-          Sensing and High-speed Landing Gear Adjustment, Journal of Robotics and Mechatronics,
+          Sensing and High-speed Landing Gear Adjustment, 
           Journal of Robotics and Mechatronics, Vol. 33, No. 1, pp.108-118, 2021.
           <a href="https://doi.org/10.20965/jrm.2021.p0108">https://doi.org/10.20965/jrm.2021.p0108</a>
         </li><br>
@@ -88,13 +88,18 @@
         <li><b><u>Mikihiro Ikura</u></b>, Satoshi Ikari, Atsushi Tomiki, Ryu Funase, Shinichi Nakasuka:
           Estimation Algorithm of Relative Position and Attitude during Proximity Rendezvous
           Using Multiple Ultra-Wide-Band Devices, The 31st ISTS Special Issue of Transaction of JSASS,
-          Vol. 17, No. 1, pp.43-50, 2019.
-          Aerospace Technology Japan. <a href="https://doi.org/10.2322/tastj.17.43">https://doi.org/10.2322/tastj.17.43</a>
+          Aerospace Technology Japan, Vol. 17, No. 1, pp.43-50, 2019.
+          <a href="https://doi.org/10.2322/tastj.17.43">https://doi.org/10.2322/tastj.17.43</a>
         </li><br>
       </ol>
 
       <h3>International Conference</h3>
       <ol>
+        <li><b><u>Mikihiro Ikura</u></b>, Sarthak Pathak, Atsushi Yamashita, Hajime Asama: 
+          Polynomial-fitting Based Calibration for an Active 3D Sensing System Using Dynamic Light Section Method, 
+          Proceedings of the 16th International Conference on Quality Control by Artificial Vision (QCAV2021), Tokushima (Japan), May 2021.
+          (Accepted)
+        </li><br>
         <li><b><u>Mikihiro Ikura</u></b>, Leo Miyashita, Masatoshi Ishikawa:
           Real-time Landing Gear Control System Based on Adaptive 3D Sensing for Safe Landing of UAV
           , 2020 IEEE/SICE International Symposium on System Integration (SII2020),
@@ -170,6 +175,12 @@
       <div class="title" id="works"> Works </div>
       <ol>
         <li>
+          <h3><a href="http://www.k2.t.u-tokyo.ac.jp/index-j.html">Ishikawa Group Lab.</a></h3>
+          <ul>
+            <li>Research Assistant (2018.6 &mdash; Now)</li>
+          </ul>
+        </li>
+        <li>
           <h3>TATA Consultancy Services</h3>
           <ul>
             <li>Software engineer (2019.9 &mdash; 2019.10)</li>
@@ -191,12 +202,6 @@
           <ul>
             <li>Software engineer (2018.8 &mdash; 2018.9)</li>
             Theme: Driver's posture estimation using car inner camera by machine learning and Genetic Algorithm
-          </ul>
-        </li>
-        <li>
-          <h3><a href="http://www.k2.t.u-tokyo.ac.jp/index-j.html">Ishikawa Senoo Lab.</a></h3>
-          <ul>
-            <li>Research Assistant (2018.6 &mdash; Now)</li>
           </ul>
         </li>
         <li>
