--- a/index.html
+++ b/index.html
@@ -73,6 +73,10 @@
       <div class="title" id="pubs"> Publications </div>
       <h3>Papers</h3>
       <ol>
+        <li><b><u>Mikihiro Ikura</u></b>, Sarthak Pathak, Atsushi Yamashita, Hajime Asama:
+          AdjustSense: Adaptive 3D Sensing System with Adjustable Spatio-temporal Resolution and Measurement Range Using High-speed Omnidirectional Camera and Direct Drive Motor, 
+          IEEE Robotics and Automation Letters (RAL). (under review)
+        </li><br>
         <li><b><u>Mikihiro Ikura</u></b>, Leo Miyashita, and Masatoshi Ishikawa:
           Stabilization System for UAV Landing on Rough Ground by Adaptive 3D
           Sensing and High-speed Landing Gear Adjustment, 
@@ -95,6 +99,11 @@
 
       <h3>International Conference</h3>
       <ol>
+        <li>
+          <b><u>Mikihiro Ikura</u></b>, Sarthak Pathak, Atsushi Yamashita, Hajime Asama:
+          AdjustSense: Adaptive 3D Sensing System with Adjustable Spatio-temporal Resolution and Measurement Range Using High-speed Omnidirectional Camera and Direct Drive Motor, 
+          2021 IEEE/RSJ International Conference on Intelligent Robots and Systems (IROS2021). (under review)
+        </li><br>
         <li><b><u>Mikihiro Ikura</u></b>, Sarthak Pathak, Atsushi Yamashita, Hajime Asama: 
           Polynomial-fitting Based Calibration for an Active 3D Sensing System Using Dynamic Light Section Method, 
           Proceedings of the 16th International Conference on Quality Control by Artificial Vision (QCAV2021), Tokushima (Japan), May 2021.
