SONY発表会の追加

--- a/index.html
+++ b/index.html
@@ -177,6 +177,8 @@
 
       <h3>Talks</h3>
       <ol>
+        <li><b><u>井倉 幹大</u></b>: AdjustSense: 高速全方位カメラとダイレクトドライブモータを用いた時空間分解能と計測範囲の調整の可能な適応的三次元形状計測システム, 
+          2020年度 Sensing Solution 大学共同研究プログラム(SSUP)研究成果発表会, 2021.3</li><br>
         <li>竹内 雅樹, 大邉 寛幸, <b><u>井倉 幹大</u></b>, CHUANLAI ZANG: コロナ検出と対策, 情報理工学系研究科 第3回 オンライン・シンポジウム
           ポスト・コロナの新たな情報化社会へ向けての提言 - 産学連携への提案(2), 2020.10 <b><font color="red">優秀発表 企業賞</font></b></li>
       </ol>
