--- a/index.html
+++ b/index.html
@@ -61,6 +61,7 @@
 
       <h3>Scholarship & Awards</h3>
       <ul>
+        <li>奨励賞, 2020年度 Sensing Solution 大学共同研究プログラム(SSUP)研究成果発表会, 2021.03</li>
         <li><a href="static/Award_0925_1.pdf">優秀発表 企業賞, 2020.10</a></li>
         <li><a href="https://www.jsme.or.jp/archive/award/shou6-19.pdf">日本機械学会 若手優秀講演フェロー賞, 2020.6</a></li>
         <li>Best Student Paper Award, 2020 IEEE/SICE International Symposium on System Integration (SII2020), 2020.1</li>
@@ -178,7 +179,7 @@
       <h3>Talks</h3>
       <ol>
         <li><b><u>井倉 幹大</u></b>: AdjustSense: 高速全方位カメラとダイレクトドライブモータを用いた時空間分解能と計測範囲の調整の可能な適応的三次元形状計測システム, 
-          2020年度 Sensing Solution 大学共同研究プログラム(SSUP)研究成果発表会, 2021.3</li><br>
+          2020年度 Sensing Solution 大学共同研究プログラム(SSUP)研究成果発表会, 2021.3 <b><font color="red">奨励賞</font></b></li><br>
         <li>竹内 雅樹, 大邉 寛幸, <b><u>井倉 幹大</u></b>, CHUANLAI ZANG: コロナ検出と対策, 情報理工学系研究科 第3回 オンライン・シンポジウム
           ポスト・コロナの新たな情報化社会へ向けての提言 - 産学連携への提案(2), 2020.10 <b><font color="red">優秀発表 企業賞</font></b></li>
       </ol>
