HWの項目を追加

--- a/index.html
+++ b/index.html
@@ -35,7 +35,9 @@
       Engineering, Department of Precision Engineering, the University of Tokyo.
       My major is high speed image processing, 3D sensing, and Robotics
       at Asama Yamashita Laboratory.
-      In particular, my research is focused on a UAV safe landing system
+      In particular, my research is focused on an adaptive 3D sensing system 
+      with adjustable spatio-temporal resolution and measurement in real time, 
+      and a real-time landing gear control system for UAV safe landing
       on an unknown and unstable ground.
       <h3>Interests</h3>
       <ul>
@@ -57,6 +59,7 @@
         <li>Language: Japanese (native), English (intermediate)</li>
         <li>Programming language: C/C++, MATLAB, Python, Javascript, Ruby, HTML</li>
         <li>Software: OpenCV, OpenGL, CUDA, Linux(Ubuntu), ROS, PyTorch, Chainer, MS Office, Inventor, Adobe Illustrator, AfterEffects, </li>
+        <li>Hardware: High-speed camera, Event-based camera, GPU, RealSense, MBED, rasberry pi</li>
       </ul>
 
       <h3>Scholarship & Awards</h3>
