技術補佐員のテーマ記載

--- a/index.html
+++ b/index.html
@@ -193,6 +193,7 @@
           <h3><a href="http://www.k2.t.u-tokyo.ac.jp/index-j.html">Ishikawa Group Lab.</a></h3>
           <ul>
             <li>Research Assistant (2018.6 &mdash; Now)</li>
+            Theme: UAV-UGV coorperative real-time superimposed image generation system
           </ul>
         </li>
         <li>
