--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 
       <h3>Scholarship & Awards</h3>
       <ul>
-        <li>奨励賞, 2020年度 Sensing Solution 大学共同研究プログラム(SSUP)研究成果発表会, 2021.03</li>
+        <li><a href="static/SSUP_Award.jpg">奨励賞, 2020年度 Sensing Solution 大学共同研究プログラム(SSUP)研究成果発表会, 2021.03</a></li>
         <li><a href="static/Award_0925_1.pdf">優秀発表 企業賞, 2020.10</a></li>
         <li><a href="https://www.jsme.or.jp/archive/award/shou6-19.pdf">日本機械学会 若手優秀講演フェロー賞, 2020.6</a></li>
         <li>Best Student Paper Award, 2020 IEEE/SICE International Symposium on System Integration (SII2020), 2020.1</li>
