伊賀上君の成果追加，見やすくした，フォーマット統一

--- a/index.html
+++ b/index.html
@@ -78,24 +78,24 @@
       <h3>Papers</h3>
       <ol>
         <li><b><u>Mikihiro Ikura</u></b>, Sarthak Pathak, Atsushi Yamashita, Hajime Asama:
-          AdjustSense: Adaptive 3D Sensing System with Adjustable Spatio-temporal Resolution and Measurement Range Using High-speed Omnidirectional Camera and Direct Drive Motor, 
+          "AdjustSense: Adaptive 3D Sensing System with Adjustable Spatio-temporal Resolution and Measurement Range Using High-speed Omnidirectional Camera and Direct Drive Motor", 
           IEEE Robotics and Automation Letters (RAL). (under review)
         </li><br>
         <li><b><u>Mikihiro Ikura</u></b>, Leo Miyashita, and Masatoshi Ishikawa:
-          Stabilization System for UAV Landing on Rough Ground by Adaptive 3D
-          Sensing and High-speed Landing Gear Adjustment, 
+          "Stabilization System for UAV Landing on Rough Ground by Adaptive 3D
+          Sensing and High-speed Landing Gear Adjustment", 
           Journal of Robotics and Mechatronics, Vol. 33, No. 1, pp.108-118, 2021.
           <a href="https://doi.org/10.20965/jrm.2021.p0108">https://doi.org/10.20965/jrm.2021.p0108</a>
         </li><br>
         <li>Kazuya Yaginuma, Jun Asakawa, Yuichi Nakagawa, Yoshihiro Tsuruda, Hiroyuki Koizumi,
           Kota Kakihara, Kanta Yanagida, Yusuke Murata, <b><u>Mikihiro Ikura</u></b>, Shuhei Matsushita,
-          Yoshihide Aoyanagi, Takeshi Matsumoto: AQT-D: CubeSat Demonstration of a Water Propulsion
-          System Deployed from ISS, Transaction of JSASS, Aerospace Technology Japan, Vol. 18, No. 4, pp.141-148, 2020. 
+          Yoshihide Aoyanagi, Takeshi Matsumoto: "AQT-D: CubeSat Demonstration of a Water Propulsion
+          System Deployed from ISS", Transaction of JSASS, Aerospace Technology Japan, Vol. 18, No. 4, pp.141-148, 2020. 
           <a href="https://doi.org/10.2322/tastj.18.141">https://doi.org/10.2322/tastj.18.141</a>
         </li><br>
         <li><b><u>Mikihiro Ikura</u></b>, Satoshi Ikari, Atsushi Tomiki, Ryu Funase, Shinichi Nakasuka:
-          Estimation Algorithm of Relative Position and Attitude during Proximity Rendezvous
-          Using Multiple Ultra-Wide-Band Devices, The 31st ISTS Special Issue of Transaction of JSASS,
+          "Estimation Algorithm of Relative Position and Attitude during Proximity Rendezvous
+          Using Multiple Ultra-Wide-Band Devices", The 31st ISTS Special Issue of Transaction of JSASS,
           Aerospace Technology Japan, Vol. 17, No. 1, pp.43-50, 2019.
           <a href="https://doi.org/10.2322/tastj.17.43">https://doi.org/10.2322/tastj.17.43</a>
         </li><br>
@@ -105,85 +105,89 @@
       <ol>
         <li>
           <b><u>Mikihiro Ikura</u></b>, Sarthak Pathak, Atsushi Yamashita, Hajime Asama:
-          AdjustSense: Adaptive 3D Sensing System with Adjustable Spatio-temporal Resolution and Measurement Range Using High-speed Omnidirectional Camera and Direct Drive Motor, 
+          "AdjustSense: Adaptive 3D Sensing System with Adjustable Spatio-temporal Resolution and Measurement Range Using High-speed Omnidirectional Camera and Direct Drive Motor", 
           2021 IEEE/RSJ International Conference on Intelligent Robots and Systems (IROS2021). (under review)
         </li><br>
         <li><b><u>Mikihiro Ikura</u></b>, Sarthak Pathak, Atsushi Yamashita, Hajime Asama: 
-          Polynomial-fitting Based Calibration for an Active 3D Sensing System Using Dynamic Light Section Method, 
+          "Polynomial-fitting Based Calibration for an Active 3D Sensing System Using Dynamic Light Section Method", 
           Proceedings of the 16th International Conference on Quality Control by Artificial Vision (QCAV2021), Tokushima (Japan), May 2021.
           (Accepted)
         </li><br>
         <li><b><u>Mikihiro Ikura</u></b>, Leo Miyashita, Masatoshi Ishikawa:
-          Real-time Landing Gear Control System Based on Adaptive 3D Sensing for Safe Landing of UAV
+          "Real-time Landing Gear Control System Based on Adaptive 3D Sensing for Safe Landing of UAV"
           , 2020 IEEE/SICE International Symposium on System Integration (SII2020),
-          Hawaii Convention Center, Honolulu, Hawaii, USA, January 12&mdash;15, 2020. <a href="https://doi.org/10.1109/SII46433.2020.9026177">https://doi.org/10.1109/SII46433.2020.9026177</a>  <b><font color="red">Best Student Paper Award</font></b><br>
+          Hawaii Convention Center, Honolulu, Hawaii, USA, January 12-15, 2020. <a href="https://doi.org/10.1109/SII46433.2020.9026177">https://doi.org/10.1109/SII46433.2020.9026177</a>  <b><font color="red">Best Student Paper Award</font></b><br>
           <b>Project web page: <a href="http://ishikawa-vision.org/vision/Safe_Landing/index-j.html" target="_blank">Japanese</a>/<a href="http://ishikawa-vision.org/vision/Safe_Landing/index-e.html" target="_blank">English</a></b>
         </li><br>
         <li>Jun Asakawa, Kazuya Yaginuma, Yoshihiro Tsuruda,
           Hiroyuki Koizumi, Yuichi Nakagawa, Kota Kakihara, Kanta Yanagida,
           Yoshihide Aoyanagi, Takeshi Matsumoto, Shuhei Matsushita, Yusuke Murata,
-          <b><u>Mikihiro Ikura</u></b>: AQT-D: Demonstration of the Water Resistojet
-          Propulsion System by the ISS-Deployed CubeSat. In Procedings of 33rd Annual AIAA/USU Conference on Small Satellites (SSC). SSC19-WKV-07, 2019.
+          <b><u>Mikihiro Ikura</u></b>: "AQT-D: Demonstration of the Water Resistojet
+          Propulsion System by the ISS-Deployed CubeSat", In Proceedings of 33rd Annual AIAA/USU Conference on Small Satellites (SSC). SSC19-WKV-07, 2019.
         </li><br>
         <li>Jun Asakawa, Kazuya Yaginuma, Yuichi Nakagawa, Yoshihiro Tsuruda,
           Hiroyuki Koizumi, Kota Kakihara, Kanta Yanagida, <b><u>Mikihiro Ikura</u></b>,
           Shuhei Matsushita, Yusuke Murata, Yoshihide Aoyanagi, Takeshi Matsumoto:
-          Development of AQT-D: the ISS-Deployed CubeSat For the Demonstration of the Water Micro-Propulsion System.
-          In Procedings of International Space Station Research and Development Conference (ISSRDC). 2019-H-39, 2019.
+          "Development of AQT-D: the ISS-Deployed CubeSat For the Demonstration of the Water Micro-Propulsion System", 
+          In Proceedings of International Space Station Research and Development Conference (ISSRDC). 2019-H-39, 2019.
         </li><br>
         <li>Ryu Funase, Satoshi Ikari, Yosuke Kawabata, Kota Miyoshi,
           Shintaro Nakajima, Takumi Kudo, Yuki Koshiro, Masashi Tomooka,
           Shunichiro Nomura, Akifumi Wachi, Kota Kakihara, Ryohei Takahashi,
           Kanta Yanagida, Shuhei Matsushita, Akihiro Ishikawa, <b><u>Mikihiro Ikura</u></b>,
           Nobuhiro Funabiki, Yuta Kobayashi, Atsushi Tomiki, Taichi Ito, et al.:
-          EQUULEUS: A 6U CUBESAT TO FLY TO LUNAR LAGRANGE POINT ONBOARD SLS EM-1,
+          "EQUULEUS: A 6U CUBESAT TO FLY TO LUNAR LAGRANGE POINT ONBOARD SLS EM-1",
           Low-Cost Planetary Missions Conference, Pasadena, the United States, August 2017.
         </li><br>
-        <li><b><u>Mikihiro Ikura</u></b>: Estimation Algorithm of Relative
+        <li><b><u>Mikihiro Ikura</u></b>: "Estimation Algorithm of Relative
           Position and Attitude during Proximity Rendezvous and Docking
-           Using Multiple Ultra-Wide-Band Devices. 2017.6
+           Using Multiple Ultra-Wide-Band Devices", 
            The 31st International Symposiumon Space Technology and Science(ISTS),
-           Matsuyama, Japan. <b><font color="red">SPSS (Society for Promotion of Space Science) President Award</font></b>
+           Matsuyama (Japan), June 2017. <b><font color="red">SPSS (Society for Promotion of Space Science) President Award</font></b>
         </li><br>
         <li>Shunichiro Nomura, Ryohei Takahashi, <b><u>Mikihiro Ikura</u></b>,
           Kenshiro Oguri, Toshihiro Obata, Satoshi Ikari, Ryu Funase:
-          Initial Design of EQUULEUS Attitude Determination and Control System:
-          How to Design an ADCS with High Reliability for a Deep Space CubeSat,
-          31st International Symposium on Space Technology and Science(ISTS), Matsuyama, Japan, June, 2017.
+          "Initial Design of EQUULEUS Attitude Determination and Control System:
+          How to Design an ADCS with High Reliability for a Deep Space CubeSat",
+          31st International Symposium on Space Technology and Science(ISTS), Matsuyama (Japan), June 2017.
         </li>
       </ol>
 
       <h3>Domestic Conference</h3>
       <ol>
-        <li><b><u>井倉 幹大</u></b>, Pathak Sarthak, 山下 淳, 淺間 一: ダイレクトドライブモータを用いた計測範囲の能動的変更が可能な三次元形状計測システムの提案,
-          第21回計測自動制御学会システムインテグレーション部門講演会 (SI2020), 講演論文集, 2B2-10, pp.1395-1400 (2020).</li><br>
-        <li><b><u>井倉 幹大</u></b>, 宮下 令央, 石川 正俊: 不整地への着陸に向けた適応的 3 次元形状計測による UAV の高速脚制御システム,
-          第20回計測自動制御学会システムインテグレーション部門講演会 (SI2019), 講演論文集, 2E5-02, pp.1881-1886 (2019).</li><br>
+        <li>伊賀上 卓也, 樋口 寛, <b><u>井倉 幹大</u></b>, 吉田 健一, 伊藤 哲, 谷口 信博, 山下 淳, 淺間 一: 
+          "リングレーザと魚眼カメラを用いた道路トンネル断面の3次元計測", 土木学会令和3年度全国大会第76回年次学術講演会講演概要集, pp. 1-2, September 2021.</li><br>
+        <li>伊賀上 卓也, 樋口 寛, <b><u>井倉 幹大</u></b>, 吉田 健一, 伊藤 哲, 谷口 信博, 山下 淳, 淺間 一: 
+          "光切断法による高精度3次元モデル生成のためのリングレーザ照射光の2D-3Dマッチングに基づく計測断面統合", 第27回画像センシングシンポジウム講演論文集 (SSII2021), 横浜, June 2021.</li><br>
+        <li><b><u>井倉 幹大</u></b>, Pathak Sarthak, 山下 淳, 淺間 一: "ダイレクトドライブモータを用いた計測範囲の能動的変更が可能な三次元形状計測システムの提案",
+          第21回計測自動制御学会システムインテグレーション部門講演会 (SI2020), 講演論文集, 2B2-10, pp.1395-1400, December 2020.</li><br>
+        <li><b><u>井倉 幹大</u></b>, 宮下 令央, 石川 正俊: "不整地への着陸に向けた適応的 3 次元形状計測による UAV の高速脚制御システム",
+          第20回計測自動制御学会システムインテグレーション部門講演会 (SI2019), 講演論文集, 2E5-02, pp.1881-1886, December 2019.</li><br>
         <li>浅川純, 柳沼和也, 中川悠一, 鶴田佳宏, 小泉宏之, 柿原浩太, 柳田幹太, 松下周平, <b><u>井倉 幹大</u></b>, 村田裕亮, 青柳賢英, 松本健
-          : ISS放出による超小型水スラスタ実証衛星AQT-Dの開発, 第63回宇宙科学技術連合講演会, (2019.11.7) / 講演論文集, 2Q10 (2019).</li><br>
+          : "ISS放出による超小型水スラスタ実証衛星AQT-Dの開発", 第63回宇宙科学技術連合講演会講演論文集, 2Q10, November 2019.</li><br>
         <li><b><u>井倉 幹大</u></b>, 宮下 令央, 石川 正俊: UAVの安全着陸に向けた
-          適応的3次元形状計測による時空間分解能の向上, ロボティクス・メカトロニクス講演会 (ROBOMECH2019), 2019 <b><font color="red">日本機械学会 若手優秀講演フェロー賞</font></b></li><br>
+          "適応的3次元形状計測による時空間分解能の向上", ロボティクス・メカトロニクス講演会 (ROBOMECH2019), June 2019 <b><font color="red">日本機械学会 若手優秀講演フェロー賞</font></b></li><br>
         <li>船瀬 龍, 三好 航太, 五十里 哲, 川端 洋輔, 尾崎 直哉, 中島 晋太郎, 小栗 健士朗, 神代 優季, 友岡 雅志, 野村 俊一郎,
           和地 瞭良, 工藤 匠, 石川 晃寛, 柿原 浩太, 高橋 亮平, 柳田 幹太, 船曳 敦漠, 松下 周平, <b><u>井倉 幹大</u></b>, 小泉 宏之, 浅川 純,
           小林 雄太, 冨木 淳史, 伊藤 大智, 鳥居 航, 吉川 一朗, 矢野 創, 阿部 新助, 橋本 樹明:
-          EQUULEUSのシステム概要と開発状況, 第18回 宇宙科学シンポジウム，相模原，2018 年1 月</li><br>
+          "EQUULEUSのシステム概要と開発状況", 第18回 宇宙科学シンポジウム，相模原，January 2018</li><br>
         <li>船瀬龍, 三好航太, 五十里哲, 川端洋輔, 尾崎直哉, 中島晋太郎, 小栗健士朗, 神代優季, 友岡雅志, 野村俊一郎, 和地瞭良, 工藤匠,
           石川晃寛, 柿原浩太, 高橋亮平, 柳田幹太, 船曳敦漠, 松下周平, <b><u>井倉幹大</u></b>, 小泉宏之, et. al.:
-          地球-月系ラグランジュ点探査CubeSat EQUULEUS(エクレウス)の概要と開発状況, 第61 回宇宙科学技術連合講演会，新潟，2017 年10 月</li><br>
+          "地球-月系ラグランジュ点探査CubeSat EQUULEUS(エクレウス)の概要と開発状況", 第61 回宇宙科学技術連合講演会，新潟，October 2017</li><br>
         <li>増田陽介, 布施綾太, 阿部新助, 柳澤正久, 島田隆司, 五十里哲, <b><u>井倉幹大</u></b>, 矢野創, 船瀬龍: 
-          超小型深宇宙探査機EQUULEUS搭載「月面衝突閃光カメラDELPHINUS」の性能評価, 日本惑星科学会2017年秋季講演会, 大阪, 2017年9月</li><br>
+          "超小型深宇宙探査機EQUULEUS搭載「月面衝突閃光カメラDELPHINUS」の性能評価", 日本惑星科学会2017年秋季講演会, 大阪, September 2017</li><br>
         <li>阿部 新助, 柳澤 正久, 布施 綾太, 小栗 健士朗, <b><u>井倉 幹大</u></b>, 矢野 創 , 船瀬 龍:
-          超小型６U深宇宙探査機EQUULEUS搭載カメラDELPHINUSの開発, 第17回 宇宙科学シンポジウム，相模原，2017 年1 月</li><br>
+          "超小型６U深宇宙探査機EQUULEUS搭載カメラDELPHINUSの開発", 第17回 宇宙科学シンポジウム，相模原，January 2017</li><br>
         <li>船瀬 龍, 五十里 哲, 尾崎 直哉, 蟻生 開人, 友岡 雅志, <b><u>井倉 幹大</u></b>, 稲守 孝哉, 荒井 朋子, 小林 正規, 岩田 隆浩, 大槻 真嗣,
-          冨木 淳史, 川勝 康弘: 超小型探査機PROCYON mini による小惑星近接フライバイ観測と深宇宙でのランデブドッキング実験,
-          第 60 回宇宙科学技術連合講演会，函館，2016 年9 月</li>
+          冨木 淳史, 川勝 康弘: "超小型探査機PROCYON mini による小惑星近接フライバイ観測と深宇宙でのランデブドッキング実験",
+          第 60 回宇宙科学技術連合講演会，函館，September 2016</li>
       </ol>
 
       <h3>Talks</h3>
       <ol>
-        <li><b><u>井倉 幹大</u></b>: AdjustSense: 高速全方位カメラとダイレクトドライブモータを用いた時空間分解能と計測範囲の調整の可能な適応的三次元形状計測システム, 
+        <li><b><u>井倉 幹大</u></b>: "AdjustSense: 高速全方位カメラとダイレクトドライブモータを用いた時空間分解能と計測範囲の調整の可能な適応的三次元形状計測システム", 
           2020年度 Sensing Solution 大学共同研究プログラム(SSUP)研究成果発表会, 2021.3 <b><font color="red">奨励賞</font></b></li><br>
-        <li>竹内 雅樹, 大邉 寛幸, <b><u>井倉 幹大</u></b>, CHUANLAI ZANG: コロナ検出と対策, 情報理工学系研究科 第3回 オンライン・シンポジウム
+        <li>竹内 雅樹, 大邉 寛幸, <b><u>井倉 幹大</u></b>, CHUANLAI ZANG: "コロナ検出と対策", 情報理工学系研究科 第3回 オンライン・シンポジウム
           ポスト・コロナの新たな情報化社会へ向けての提言 - 産学連携への提案(2), 2020.10 <b><font color="red">優秀発表 企業賞</font></b></li>
       </ol>
 
