--- a/index.html
+++ b/index.html
@@ -77,6 +77,10 @@
       <div class="title" id="pubs"> Publications </div>
       <h3>Papers</h3>
       <ol>
+        <li>伊賀上卓也, 樋口寛, <u><b>井倉幹大</b></u>, 吉田健一, 伊藤哲, 谷口信博, 山下淳, 淺間一:
+          "リングレーザ照射光の2D-3D マッチングに基づく光切断法によるトンネル内部の3 次元計測"
+          精密工学会誌.(under review)
+        </li>
         <li><b><u>Mikihiro Ikura</u></b>, Leo Miyashita, and Masatoshi Ishikawa:
           "Stabilization System for UAV Landing on Rough Ground by Adaptive 3D
           Sensing and High-speed Landing Gear Adjustment", 
