--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
       <ol>
         <li><b><u>Mikihiro Ikura</u></b>, Sarthak Pathak, Atsushi Yamashita, Hajime Asama: 
           "Polynomial-fitting Based Calibration for an Active 3D Sensing System Using Dynamic Light Section Method", 
-          Proceedings of the 16th International Conference on Quality Control by Artificial Vision (QCAV2021), Tokushima (Japan), May 2021.
+          Proceedings of SPIE 11794, 15th International Conference on Quality Control by Artificial Vision (QCAV2021), Tokushima (Japan), 117940J, 16 July 2021.
           <a href="https://doi.org/10.1117/12.2590827">https://doi.org/10.1117/12.2590827</a>
         </li><br>
         <li><b><u>Mikihiro Ikura</u></b>, Leo Miyashita, Masatoshi Ishikawa:
