--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
       <ul>
         <li>Ph.D student in Precision Engineering, 2020-Now (Graduate School of Engineering, The University of Tokyo)</li>
         <li>M.S. in Creative Informatics, 2018-2020 (Graduate School of Information Science and Technology, The University of Tokyo)</li>
-        <li>B.S. in Aeronautics and Astronautics, 2013-2018 (Faculty of Engineering, The University of Tokyo)</li>
+        <li>B.E. in Aeronautics and Astronautics, 2013-2018 (Faculty of Engineering, The University of Tokyo)</li>
       </ul>
 
       <h3>Skills</h3>
@@ -77,13 +77,18 @@
       <div class="title" id="pubs"> Publications </div>
       <h3>Papers</h3>
       <ol>
+        <li><b><u>Mikihiro Ikura</u></b>, Sarthak Pathak, Jun Younes Louhi Kasahara, Atsushi Yamashita, Hajime Asama: 
+          "AdjustSense: Adaptive 3D Sensing System with Adjustable Spatio-temporal Resolution and Measurement Range 
+          Using High-speed Omnidirectional Camera and Direct Drive Motor", 
+          Sensors. (under review)
+        </li><br>
         <li><u><b>井倉 幹大</b></u>, 宮下 令央, 山下 淳, 石川 正俊, 淺間 一:
-          "高速点滅LEDマーカと複数のRGB-Dセンサを用いた遮蔽物を透過可能な重畳映像提示システム"
-          精密工学会誌.(under review)
+          "高速点滅LED マーカと複数のRGB-D センサを用いた遮蔽領域を提示可能な任意視点重畳映像生成システム"
+          精密工学会誌. (under review)
         </li><br>
         <li>伊賀上 卓也, 樋口 寛, <u><b>井倉幹大</b></u>, 吉田 健一, 伊藤 哲, 谷口 信博, 山下 淳, 淺間 一:
-          "リングレーザ照射光の2D-3D マッチングに基づく光切断法によるトンネル内部の3 次元計測"
-          精密工学会誌.(under review)
+          "リングレーザ照射光の2D-3D マッチングに基づく光切断法によるトンネル内部の3 次元計測",
+          精密工学会誌, Vol. 87, No. 12, December 2021. (accepted)
         </li><br>
         <li><b><u>Mikihiro Ikura</u></b>, Leo Miyashita, and Masatoshi Ishikawa:
           "Stabilization System for UAV Landing on Rough Ground by Adaptive 3D
@@ -109,7 +114,7 @@
       <ol>
         <li><b><u>Mikihiro Ikura</u></b>, Sarthak Pathak, Atsushi Yamashita, Hajime Asama: 
           "Polynomial-fitting Based Calibration for an Active 3D Sensing System Using Dynamic Light Section Method", 
-          Proceedings of SPIE 11794, 15th International Conference on Quality Control by Artificial Vision (QCAV2021), Tokushima (Japan), 117940J, 16 July 2021.
+          Proceedings of SPIE, Vol. 11794, 15th International Conference on Quality Control by Artificial Vision (QCAV2021), pp. 131-137, Tokushima (Japan), 2021.
           <a href="https://doi.org/10.1117/12.2590827">https://doi.org/10.1117/12.2590827</a>
         </li><br>
         <li><b><u>Mikihiro Ikura</u></b>, Leo Miyashita, Masatoshi Ishikawa:
