--- a/index.html
+++ b/index.html
@@ -80,7 +80,8 @@
         <li><b><u>Mikihiro Ikura</u></b>, Sarthak Pathak, Jun Younes Louhi Kasahara, Atsushi Yamashita, Hajime Asama: 
           "AdjustSense: Adaptive 3D Sensing System with Adjustable Spatio-temporal Resolution and Measurement Range 
           Using High-speed Omnidirectional Camera and Direct Drive Motor", 
-          Sensors. (accepted)
+          Sensors, Vol. 21, No. 21, pp.1-18, 2021.
+          <a href="https://doi.org/10.3390/s21216975">https://doi.org/10.3390/s21216975</a>
         </li><br>
         <li><u><b>井倉 幹大</b></u>, 宮下 令央, 山下 淳, 石川 正俊, 淺間 一:
           "高速点滅LED マーカと複数のRGB-D センサを用いた遮蔽領域を提示可能な任意視点重畳映像生成システム"
