--- a/index.html
+++ b/index.html
@@ -199,6 +199,13 @@
       <div class="title" id="works"> Works </div>
       <ol>
         <li>
+          <h3><a href="https://www.mujin.co.jp/en/recruit/internship-program/">MUJIN</a></h3>
+          <ul>
+            <li>Robotics Technology Internship Program (2021.11 &mdash; Now)</li>
+            Computer Vision engineer
+          </ul>
+        </li>
+        <li>
           <h3><a href="http://www.k2.t.u-tokyo.ac.jp/index-j.html">Ishikawa Group Lab.</a></h3>
           <ul>
             <li>Research Assistant (2018.6 &mdash; Now)</li>
