--- a/index.html
+++ b/index.html
@@ -203,6 +203,7 @@
           <ul>
             <li>Robotics Technology Internship Program (2021.11 &mdash; Now)</li>
             Computer Vision engineer
+            Supervisor: Dr. José Jerónimo Moreira Rodrigues
           </ul>
         </li>
         <li>
