--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@
           <h3><a href="https://www.mujin.co.jp/en/recruit/internship-program/">MUJIN</a></h3>
           <ul>
             <li>Robotics Technology Internship Program (2021.11 &mdash; Now)</li>
-            Computer Vision engineer
+            Computer Vision engineer <br>
             Supervisor: Dr. José Jerónimo Moreira Rodrigues
           </ul>
         </li>
