スペルの修正

--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@
       <div class="title" id="works"> Works </div>
       <ol>
         <li>
-          <h3><a href="https://www.mujin.co.jp/en/recruit/internship-program/">MUJIN</a></h3>
+          <h3><a href="https://www.mujin.co.jp/en/recruit/internship-program/">Mujin</a></h3>
           <ul>
             <li>Robotics Technology Internship Program (2021.11 &mdash; Now)</li>
             Computer Vision engineer <br>
