precision engineering journal accepted

--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
         </li><br>
         <li><u><b>井倉 幹大</b></u>, 宮下 令央, 山下 淳, 石川 正俊, 淺間 一:
           "高速点滅LED マーカと複数のRGB-D センサを用いた遮蔽領域を提示可能な任意視点重畳映像生成システム"
-          精密工学会誌. (under review)
+          精密工学会誌. (accepted)
         </li><br>
         <li>伊賀上 卓也, 樋口 寛, <u><b>井倉幹大</b></u>, 吉田 健一, 伊藤 哲, 谷口 信博, 山下 淳, 淺間 一:
           "リングレーザ照射光の2D-3D マッチングに基づく光切断法によるトンネル内部の3 次元計測",
