--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
         <li>Language: Japanese (native), English (intermediate)</li>
         <li>Programming language: C/C++, MATLAB, Python, Javascript, Ruby, HTML</li>
         <li>Software: OpenCV, OpenGL, CUDA, Linux(Ubuntu), ROS, PyTorch, Chainer, MS Office, Inventor, Adobe Illustrator, AfterEffects, </li>
-        <li>Hardware: High-speed camera, Event-based camera, GPU, RealSense, MBED, rasberry pi</li>
+        <li>Hardware: High-speed camera, Event-based camera, GPU, RealSense, MBED, rasberry pi, Arduino</li>
       </ul>
 
       <h3>Scholarship & Awards</h3>
@@ -89,7 +89,8 @@
         </li><br>
         <li>伊賀上 卓也, 樋口 寛, <u><b>井倉幹大</b></u>, 吉田 健一, 伊藤 哲, 谷口 信博, 山下 淳, 淺間 一:
           "リングレーザ照射光の2D-3D マッチングに基づく光切断法によるトンネル内部の3 次元計測",
-          精密工学会誌, Vol. 87, No. 12, December 2021. (accepted)
+          精密工学会誌, Vol. 87, No. 12, December 2021.
+          <a href="https://doi.org/10.2493/jjspe.87.987">https://doi.org/10.2493/jjspe.87.987</a>
         </li><br>
         <li><b><u>Mikihiro Ikura</u></b>, Leo Miyashita, and Masatoshi Ishikawa:
           "Stabilization System for UAV Landing on Rough Ground by Adaptive 3D
@@ -190,6 +191,8 @@
 
       <h3>Talks</h3>
       <ol>
+        <li><b><u>井倉 幹大</u></b>: "ご父母のためのオープンキャンパス ~博士課程生活と研究紹介~", 工学系研究科 ご父母（ご家族）のためのオープンキャンパス, 
+          2021.12</li><br>
         <li><b><u>井倉 幹大</u></b>: "AdjustSense: 高速全方位カメラとダイレクトドライブモータを用いた時空間分解能と計測範囲の調整の可能な適応的三次元形状計測システム", 
           2020年度 Sensing Solution 大学共同研究プログラム(SSUP)研究成果発表会, 2021.3 <b><font color="red">奨励賞</font></b></li><br>
         <li>竹内 雅樹, 大邉 寛幸, <b><u>井倉 幹大</u></b>, CHUANLAI ZANG: "コロナ検出と対策", 情報理工学系研究科 第3回 オンライン・シンポジウム
