--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
       <h3>Skills</h3>
       <ul>
         <li>Language: Japanese (native), English (intermediate)</li>
-        <li>Programming language: C/C++, MATLAB, Python, Javascript, Ruby, HTML</li>
+        <li>Programming language: C/C++, Python, MATLAB, Javascript, Ruby, HTML</li>
         <li>Software: OpenCV, OpenGL, CUDA, Linux(Ubuntu), ROS, PyTorch, Chainer, MS Office, Inventor, Adobe Illustrator, AfterEffects, </li>
         <li>Hardware: High-speed camera, Event-based camera, GPU, RealSense, MBED, rasberry pi, Arduino</li>
       </ul>
