--- a/index.html
+++ b/index.html
@@ -205,7 +205,7 @@
         <li>
           <h3><a href="https://www.mujin.co.jp/en/recruit/internship-program/">Mujin</a></h3>
           <ul>
-            <li>Robotics Technology Internship Program (2021.11 &mdash; Now)</li>
+            <li>Robotics Technology Internship Program (2021.11 &mdash; 2022.2)</li>
             Computer Vision engineer <br>
             Supervisor: Dr. José Jerónimo Moreira Rodrigues
           </ul>
