--- a/index.html
+++ b/index.html
@@ -49,6 +49,7 @@
 
       <h3>Education</h3>
       <ul>
+        <li>Visiting Ph.D student in Robotics, Artificial Intelligence and Embedded Systems Laboratory, 2022.4- (Department of Informatics, Technical University of Munich)</li>
         <li>Ph.D student in Precision Engineering, 2020-Now (Graduate School of Engineering, The University of Tokyo)</li>
         <li>M.S. in Creative Informatics, 2018-2020 (Graduate School of Information Science and Technology, The University of Tokyo)</li>
         <li>B.E. in Aeronautics and Astronautics, 2013-2018 (Faculty of Engineering, The University of Tokyo)</li>
@@ -207,7 +208,8 @@
           <ul>
             <li>Robotics Technology Internship Program (2021.11 &mdash; 2022.2)</li>
             Computer Vision engineer <br>
-            Supervisor: Dr. José Jerónimo Moreira Rodrigues
+            Supervisor: Dr. José Jerónimo Moreira Rodrigues <br>
+            Work on camera calibration and robot kinematic calibration improvements
           </ul>
         </li>
         <li>
