add paper, talk for sony

--- a/index.html
+++ b/index.html
@@ -82,6 +82,7 @@
         <li><u><b>井倉 幹大</b></u>, 宮下 令央, 山下 淳, 石川 正俊, 淺間 一:
           "高速点滅LED マーカと複数のRGB-D センサを用いた遮蔽領域を提示可能な任意視点重畳映像生成システム"
           精密工学会誌, Vol. 88, No.3, March 2022.
+          <a href="https://doi.org/10.2493/jjspe.88.282">https://doi.org/10.2493/jjspe.88.282</a>
         </li><br>
         <li><b><u>Mikihiro Ikura</u></b>, Sarthak Pathak, Jun Younes Louhi Kasahara, Atsushi Yamashita, Hajime Asama: 
           "AdjustSense: Adaptive 3D Sensing System with Adjustable Spatio-temporal Resolution and Measurement Range 
@@ -193,9 +194,11 @@
 
       <h3>Talks</h3>
       <ol>
+        <li><b><u>井倉 幹大</u></b>: "AdjustSense: 高速全方位カメラとダイレクトドライブモータを用いた時空間分解能と計測範囲の調整の可能な適応的三次元形状計測システム",
+          2021年度 Sensing Solution 大学共同研究プログラム(SSUP)研究成果発表会, 2022.3</li><br>
         <li><b><u>井倉 幹大</u></b>: "ご父母のためのオープンキャンパス ~博士課程生活と研究紹介~", 工学系研究科 ご父母（ご家族）のためのオープンキャンパス, 
           2021.12</li><br>
-        <li><b><u>井倉 幹大</u></b>: "AdjustSense: 高速全方位カメラとダイレクトドライブモータを用いた時空間分解能と計測範囲の調整の可能な適応的三次元形状計測システム", 
+        <li><b><u>井倉 幹大</u></b>: "AdjustSense: 高速全方位カメラとダイレクトドライブモータを用いた時空間分解能と計測範囲の調整の可能な適応的三次元形状計測システム",
           2020年度 Sensing Solution 大学共同研究プログラム(SSUP)研究成果発表会, 2021.3 <b><font color="red">奨励賞</font></b></li><br>
         <li>竹内 雅樹, 大邉 寛幸, <b><u>井倉 幹大</u></b>, CHUANLAI ZANG: "コロナ検出と対策", 情報理工学系研究科 第3回 オンライン・シンポジウム
           ポスト・コロナの新たな情報化社会へ向けての提言 - 産学連携への提案(2), 2020.10 <b><font color="red">優秀発表 企業賞</font></b></li>
