--- a/index.html
+++ b/index.html
@@ -179,17 +179,17 @@
         <li>船瀬 龍, 三好 航太, 五十里 哲, 川端 洋輔, 尾崎 直哉, 中島 晋太郎, 小栗 健士朗, 神代 優季, 友岡 雅志, 野村 俊一郎,
           和地 瞭良, 工藤 匠, 石川 晃寛, 柿原 浩太, 高橋 亮平, 柳田 幹太, 船曳 敦漠, 松下 周平, <b><u>井倉 幹大</u></b>, 小泉 宏之, 浅川 純,
           小林 雄太, 冨木 淳史, 伊藤 大智, 鳥居 航, 吉川 一朗, 矢野 創, 阿部 新助, 橋本 樹明:
-          "EQUULEUSのシステム概要と開発状況", 第18回 宇宙科学シンポジウム，相模原，January 2018</li><br>
+          "EQUULEUSのシステム概要と開発状況", 第18回 宇宙科学シンポジウム, 相模原, January 2018</li><br>
         <li>船瀬龍, 三好航太, 五十里哲, 川端洋輔, 尾崎直哉, 中島晋太郎, 小栗健士朗, 神代優季, 友岡雅志, 野村俊一郎, 和地瞭良, 工藤匠,
           石川晃寛, 柿原浩太, 高橋亮平, 柳田幹太, 船曳敦漠, 松下周平, <b><u>井倉幹大</u></b>, 小泉宏之, et. al.:
-          "地球-月系ラグランジュ点探査CubeSat EQUULEUS(エクレウス)の概要と開発状況", 第61 回宇宙科学技術連合講演会，新潟，October 2017</li><br>
+          "地球-月系ラグランジュ点探査CubeSat EQUULEUS(エクレウス)の概要と開発状況", 第61 回宇宙科学技術連合講演会, 新潟, October 2017</li><br>
         <li>増田陽介, 布施綾太, 阿部新助, 柳澤正久, 島田隆司, 五十里哲, <b><u>井倉幹大</u></b>, 矢野創, 船瀬龍: 
           "超小型深宇宙探査機EQUULEUS搭載「月面衝突閃光カメラDELPHINUS」の性能評価", 日本惑星科学会2017年秋季講演会, 大阪, September 2017</li><br>
         <li>阿部 新助, 柳澤 正久, 布施 綾太, 小栗 健士朗, <b><u>井倉 幹大</u></b>, 矢野 創 , 船瀬 龍:
-          "超小型６U深宇宙探査機EQUULEUS搭載カメラDELPHINUSの開発", 第17回 宇宙科学シンポジウム，相模原，January 2017</li><br>
+          "超小型6U深宇宙探査機EQUULEUS搭載カメラDELPHINUSの開発", 第17回 宇宙科学シンポジウム, 相模原, January 2017</li><br>
         <li>船瀬 龍, 五十里 哲, 尾崎 直哉, 蟻生 開人, 友岡 雅志, <b><u>井倉 幹大</u></b>, 稲守 孝哉, 荒井 朋子, 小林 正規, 岩田 隆浩, 大槻 真嗣,
           冨木 淳史, 川勝 康弘: "超小型探査機PROCYON mini による小惑星近接フライバイ観測と深宇宙でのランデブドッキング実験",
-          第 60 回宇宙科学技術連合講演会，函館，September 2016</li>
+          第 60 回宇宙科学技術連合講演会, 函館, September 2016</li>
       </ol>
 
       <h3>Talks</h3>
@@ -218,7 +218,7 @@
         <li>
           <h3><a href="http://www.k2.t.u-tokyo.ac.jp/index-j.html">Ishikawa Group Lab.</a></h3>
           <ul>
-            <li>Research Assistant (2018.6 &mdash; Now)</li>
+            <li>Research Assistant (2018.6 &mdash; 2022.2)</li>
             Theme: UAV-UGV coorperative real-time superimposed image generation system
           </ul>
         </li>
