add studying abroad

--- a/index.html
+++ b/index.html
@@ -59,13 +59,13 @@
       <ul>
         <li>Language: Japanese (native), English (intermediate)</li>
         <li>Programming language: C/C++, Python, MATLAB, Javascript, Ruby, HTML</li>
-        <li>Software: OpenCV, OpenGL, CUDA, Linux(Ubuntu), ROS, PyTorch, Chainer, MS Office, Inventor, Adobe Illustrator, AfterEffects, </li>
+        <li>Software: OpenCV, OpenGL, CUDA, Linux(Ubuntu), PyTorch, ROS, Carla simulator, Inventor, Adobe Illustrator, AfterEffects</li>
         <li>Hardware: High-speed camera, Event-based camera, GPU, RealSense, MBED, rasberry pi, Arduino</li>
       </ul>
 
       <h3>Scholarship & Awards</h3>
       <ul>
-        <li><a href="https://www.jsps.go.jp/english/e-abc/index.html">Overseas Challenge Program for Young Researchers</a>, Japan Society for the Promotion of Science (JSPS), April (2022) – Oct (2022)</li>
+        <li><a href="https://www.jsps.go.jp/english/e-abc/index.html">Overseas Challenge Program for Young Researchers</a>, Japan Society for the Promotion of Science (JSPS), April (2022) –</li>
         <li><a href="static/SSUP_Award.jpg">奨励賞, 2020年度 Sensing Solution 大学共同研究プログラム(SSUP)研究成果発表会, 2021.03</a></li>
         <li><a href="static/Award_0925_1.pdf">優秀発表 企業賞, 2020.10</a></li>
         <li><a href="https://www.jsme.or.jp/archive/award/shou6-19.pdf">日本機械学会 若手優秀講演フェロー賞, 2020.6</a></li>
@@ -164,6 +164,9 @@
 
       <h3>Domestic Conference</h3>
       <ol>
+        <li>速水 桃子, 伊賀上 卓也, <b><u>井倉 幹大</u></b>, 樋口 寛, ルイ笠原 純ユネス, 伊藤 哲, 谷口 信博,
+          森野 弘之, 吉田 健一, 山下 淳, 淺間 一: "孔口の楕円近似に基づくカメラ画像を用いたロックボルト孔の位置および角度推定",
+          動的画像処理実利用化ワークショップ2022講演論文集 (DIA2022), pp.18-23, March 2022.</li><br>
         <li>伊賀上 卓也, 樋口 寛, <b><u>井倉 幹大</u></b>, 吉田 健一, 伊藤 哲, 谷口 信博, 山下 淳, 淺間 一: 
           "リングレーザと魚眼カメラを用いた道路トンネル断面の3次元計測", 土木学会令和3年度全国大会第76回年次学術講演会講演概要集, pp. 1-2, September 2021.</li><br>
         <li>伊賀上 卓也, 樋口 寛, <b><u>井倉 幹大</u></b>, 吉田 健一, 伊藤 哲, 谷口 信博, 山下 淳, 淺間 一: 
@@ -206,6 +209,14 @@
 
       <div class="title" id="works"> Works </div>
       <ol>
+        <li>
+          <h3><a href="https://www.ce.cit.tum.de/en/air/home/">Robotics, Artificial Intelligence and Real-time Systems Lab.</a></h3>
+          <ul>
+            <li>Visiting Ph.D student at Technical University of Munich (2022.4 &mdash;)</li>
+            Supervisor: Prof. Alois Knoll, Dr. Florian Walter<br>
+            Object detection with Spiking Neural Network and Event-based camera in Adverse Environment
+          </ul>
+        </li>
         <li>
           <h3><a href="https://www.mujin.co.jp/en/recruit/internship-program/">Mujin</a></h3>
           <ul>
