add DLR, satomi scholarship etc.

--- a/index.html
+++ b/index.html
@@ -65,7 +65,8 @@
 
       <h3>Scholarship & Awards</h3>
       <ul>
-        <li><a href="https://www.jsps.go.jp/english/e-abc/index.html">Overseas Challenge Program for Young Researchers</a>, Japan Society for the Promotion of Science (JSPS), April (2022) –</li>
+        <li><a href="https://www.satomi-s.or.jp/">Satomi Scholarship</a>, The Satomi Scholarship Foundation, October (2022) – March (2023)</li>
+        <li><a href="https://www.jsps.go.jp/english/e-abc/index.html">Overseas Challenge Program for Young Researchers</a>, Japan Society for the Promotion of Science (JSPS), April (2022) – September (2022)</li>
         <li><a href="static/SSUP_Award.jpg">奨励賞, 2020年度 Sensing Solution 大学共同研究プログラム(SSUP)研究成果発表会, 2021.03</a></li>
         <li><a href="static/Award_0925_1.pdf">優秀発表 企業賞, 2020.10</a></li>
         <li><a href="https://www.jsme.or.jp/archive/award/shou6-19.pdf">日本機械学会 若手優秀講演フェロー賞, 2020.6</a></li>
@@ -210,11 +211,28 @@
       <div class="title" id="works"> Works </div>
       <ol>
         <li>
+          <h3><a href="https://www.dlr.de/EN/Home/home_node.html">DLR, German Aerospace Center</a></h3>
+          <ul>
+            <li>Internship as a guest researcher at the department of Perception and Cognition (2022.11 &mdash;)</li>
+            Supervisor: Dr. Wolfgang Stürzl, Marcus Müller<br>
+            Event-based cameras for MAV
+          </ul>
+        </li>
+        <li>
           <h3><a href="https://www.ce.cit.tum.de/en/air/home/">Robotics, Artificial Intelligence and Real-time Systems Lab.</a></h3>
           <ul>
             <li>Visiting Ph.D student at Technical University of Munich (2022.4 &mdash;)</li>
             Supervisor: Prof. Alois Knoll, Dr. Florian Walter<br>
             Object detection with Spiking Neural Network and Event-based camera in Adverse Environment
+          </ul>
+        </li>
+        <li>
+          <h3><a href="https://www.docswell.com/s/niyalist/KY723Z-2022-05-21-164854">Ito Lab.</a></h3>
+          <ul>
+            <li>Research Assistant (2022.10 &mdash;)</li>
+            Computer Vision engineer <br>
+            Supervisor: Dr. Masaki Ito <br>
+            Work on object detection for vehicles in Intelligent Transportation System
           </ul>
         </li>
         <li>
