add workshop at TUM

--- a/index.html
+++ b/index.html
@@ -207,6 +207,8 @@
 
       <h3>Talks</h3>
       <ol>
+        <li><b><u>Mikihiro Ikura</u></b>: "Spiking Neural Networks for Robust and Efficient Object Detection in Intelligent Transportation Systems With Roadside Event-Based Cameras",
+          TUM-UTokyo Workshop 2023 "Excellence, Diversity, and Mobility", 2023.02</li><br>
         <li><b><u>井倉 幹大</u></b>: "AdjustSense: 高速全方位カメラとダイレクトドライブモータを用いた時空間分解能と計測範囲の調整の可能な適応的三次元形状計測システム",
           2021年度 Sensing Solution 大学共同研究プログラム(SSUP)研究成果発表会, 2022.3</li><br>
         <li><b><u>井倉 幹大</u></b>: "ご父母のためのオープンキャンパス ~博士課程生活と研究紹介~", 工学系研究科 ご父母（ご家族）のためのオープンキャンパス, 
