--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
         <li><b><u>Mikihiro Ikura</u></b>, Florian Walter, Alois Knoll:
           "Spiking Neural Networks for Robust and Efﬁcient Object Detection in
           Intelligent Transportation Systems With Roadside Event-Based Cameras"
-          IEEE Intelligent Vehicles Symposium 2023 (Under review).
+          IEEE Intelligent Vehicles Symposium 2023 (Accepted).
         </li><br>
         <li><b><u>Mikihiro Ikura</u></b>, Sarthak Pathak, Atsushi Yamashita, Hajime Asama: 
           "Polynomial-fitting Based Calibration for an Active 3D Sensing System Using Dynamic Light Section Method", 
